PUBMAN-1060 fixed: Wrong label in revision tab

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -737,7 +737,7 @@ List_lblGridList = Tabellarische Ansicht
 
 List_lblPage = Seite
 
-List_lblRevision = Ist Revision von:
+List_lblRevision = Revisionen:
 
 List_lblSelectItem = Ausw\u00E4hlen
 
