--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -736,7 +736,7 @@ List_lblGridList = Table View
 
 List_lblPage = Page
 
-List_lblRevision = Is Revision of:
+List_lblRevision = Revisions:
 
 List_lblSelectItem = Select Item
 
