--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -28,6 +28,8 @@
 
 AcceptItemPage = Datensatz akzeptieren
 
+AcceptItem_lblAudienceNoticeAccept = Sie k\u00F6nnen die Nutzergruppen f\u00FCr den Zugriff auf die Volltexte im n\u00E4chsten Schritt unter dem Tab "Sharing" ausw\u00E4hlen.
+
 #
 # Accept
 #
@@ -842,7 +844,9 @@ SubmitItem_lblReleaseComment = Kommentar zur Freigabe
 
 SubmitItem_lblSubmitAudienceNotice = Sharing-Hinweis
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = Sie k\u00F6nnen die Nutzergruppen f\u00FCr den Zugriff auf Ihre Volltexte im n\u00E4chsten Schritt unter dem Tab "Sharing" ausw\u00E4hlen.
+SubmitItem_lblSubmitAudienceNoticeRelease = Die Nutzergruppen f\u00FCr den Zugriff auf Ihre Volltexte k\u00F6nnen nur vom Moderator festgelegt werden. Bitte hinterlassen Sie entsprechende Hinweise f\u00FCr den Moderator im Feld unten.
+
+SubmitItem_lblSubmitAudienceNoticeSubmit = Die Nutzergruppen f\u00FCr den Zugriff auf Ihre Volltexte kann nur der Moderator ausw\u00E4hlen, sobald er Ihren Datensatz freigegeben hat. Bitte hinterlassen Sie entsprechende Hinweise f\u00FCr den Moderator im Feld unten.
 
 SubmitItem_lblSubmitComment = Kommentar zum Einstellen
 
