--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -27,6 +27,8 @@
 
 AcceptItemPage = Accept Item
 
+AcceptItem_lblAudienceNoticeAccept = You can define the usergroup for access to the restricted files, in the next step, under the tab "Sharing".
+
 #
 # Accept
 #
@@ -841,7 +843,9 @@ SubmitItem_lblReleaseComment = Release Comment
 
 SubmitItem_lblSubmitAudienceNotice = Sharing Notice
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = You can define the usergroup for access to your files, in the next step, under the tab "Sharing".
+SubmitItem_lblSubmitAudienceNoticeRelease = The usergroups which will have access to your files can only be defined by the moderator. Please leave a respective message for the moderator in the field below.
+
+SubmitItem_lblSubmitAudienceNoticeSubmit = The usergroups which will have access to your files can only be defined by the moderator, as soon as your item is released. Please leave a respective message for the moderator in the field below.
 
 SubmitItem_lblSubmitComment = Submit Comment
 
