--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -27,6 +27,8 @@
 
 AcceptItemPage = \u30A2\u30A4\u30C6\u30E0\u627F\u8A8D
 
+AcceptItem_lblAudienceNoticeAccept = \u975E\u516C\u958B\u30FB\u5236\u9650\u4ED8\u304D\u30D5\u30A1\u30A4\u30EB\u306B\u5BFE\u3057\u3066\u306F\u3001\u516C\u958B\u5F8C\u306B\u3001\u300C\u5171\u6709\u300D\u30BF\u30D6\u30E1\u30CB\u30E5\u30FC\u304B\u3089\u30A2\u30AF\u30BB\u30B9\u53EF\u80FD\u306A\u30E6\u30FC\u30B6\u30B0\u30EB\u30FC\u30D7\u3092\u6307\u5B9A\u3067\u304D\u307E\u3059\u3002
+
 #
 # Accept
 #
@@ -837,7 +839,9 @@ SubmitItem_lblReleaseComment = \u516C\u958B\u30B3\u30E1\u30F3\u30C8
 
 SubmitItem_lblSubmitAudienceNotice = \u30D5\u30A1\u30A4\u30EB\u5171\u6709
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = \u975E\u516C\u958B\u30FB\u5236\u9650\u4ED8\u304D\u30D5\u30A1\u30A4\u30EB\u306B\u5BFE\u3057\u3066\u306F\u3001\u516C\u958B\u5F8C\u306B\u3001\u300C\u5171\u6709\u300D\u30BF\u30D6\u30E1\u30CB\u30E5\u30FC\u304B\u3089\u30A2\u30AF\u30BB\u30B9\u53EF\u80FD\u306A\u30E6\u30FC\u30B6\u30B0\u30EB\u30FC\u30D7\u3092\u6307\u5B9A\u3067\u304D\u307E\u3059\u3002
+SubmitItem_lblSubmitAudienceNoticeRelease = The usergroups which will have access to your files can only be defined by the moderator. Please leave a respective message for the moderator in the field below.
+
+SubmitItem_lblSubmitAudienceNoticeSubmit = The usergroups which will have access to your files can only be defined by the moderator, as soon as your item is released. Please leave a respective message for the moderator in the field below.
 
 SubmitItem_lblSubmitComment = \u767B\u9332\u30B3\u30E1\u30F3\u30C8
 
