warn message added if item version is not the latest version

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -427,6 +427,8 @@ itemHasBeenChangedInTheMeantime = Der Datensatz, den Sie speichern, einstellen o
 # EditItem
 itemHasNotBeenChanged = Der Datensatz wurde nicht ge\u00E4ndert und somit auch nicht erneut abgespeichert.
 
+itemIsNotLatestVersion = Bitte  beachten Sie, dass das die angezeigte Version des Items nicht die letzte Version ist.
+
 #
 # Validation rule responses
 #
