--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -433,6 +433,8 @@ itemHasBeenChangedInTheMeantime = The item you want to save, submit or release, 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
 
+itemIsNotLatestVersion = Please note that this is not the latest version of this item.
+
 #
 # Validation rule responses
 #
