PUBMAN-1135 fixed: Import filter in QA workspace does not work

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -711,6 +711,8 @@ ItemList_SortOrderDescending = absteigend
 
 ItemList_Total = Insgesamt:
 
+ItemList_filterAllExceptPendingWithdrawn = Alle (au\u00DFer schwebend und zur\u00FCckgezogen)
+
 ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer zur\u00FCckgezogen)
 
 ItemList_of = von
