--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -710,6 +710,8 @@ ItemList_SortOrderDescending = descending
 
 ItemList_Total = Total:
 
+ItemList_filterAllExceptPendingWithdrawn = All (except pending and withdrawn)
+
 ItemList_filterAllExceptWithdrawn = All (except withdrawn)
 
 ItemList_of = of
