--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -706,6 +706,8 @@ ItemList_SortOrderDescending = \u964D\u9806\u306B\u4E26\u3093\u3067\u3044\u307E\
 
 ItemList_Total = \u4EF6\u6570:
 
+ItemList_filterAllExceptPendingWithdrawn = All (except pending and withdrawn)
+
 ItemList_filterAllExceptWithdrawn = \u5168\u3066\uFF08\u53D6\u308A\u4E0B\u3052\u5206\u306F\u9664\u304F\uFF09
 
 ItemList_of = /
