Fix for PUBMAN-1073

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -104,11 +104,13 @@ ReviewMethodInternalNotProvided = Es muss eine interne Begutachtung spezifiziert
 
 ReviewMethodNotProvided = Wenn ein Erscheinungsdatum ausgef\u00FCllt ist, muss auch die Art der Begutachtung angegeben werden.
 
+SlashInFilename = Der Dateiname darf keinen Schr\u00E4gstrich "/" enthalten.
+
 SourceCreatorRoleNotProvided = Die Rolle des Urhebers der Quelle muss angegeben werden.
 
 SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss ebenfalls ein Genre f\u00FCr die Quelle angegeben werden. 
 
-SourceNotProvided = Wenn das Genre "Zeitschriftenartikell", "Buchkapitel" oder "Konferenzbeitrag" gew\u00E4hlt ist, muss mindestens eine Quelle angegeben werden.
+SourceNotProvided = Wenn das Genre "Zeitschriftenartikel", "Buchkapitel" oder "Konferenzbeitrag" gew\u00E4hlt ist, muss mindestens eine Quelle angegeben werden.
 
 SourceTitleNotProvided = Bei den Quellenangaben fehlt der Titel der Quelle.
 
