--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -107,6 +107,8 @@ ReviewMethodInternalNotProvided = The Review Method has to have the value "inter
 
 ReviewMethodNotProvided = If a date of type "published in print" is given, the review type has to be provided.
 
+SlashInFilename = The filename must not contain a slash "/".
+
 SourceCreatorRoleNotProvided = The role of a creator of a source is not provided.
 
 SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
