--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -107,6 +107,8 @@ ReviewMethodInternalNotProvided = \u67FB\u8AAD\u7A2E\u5225\u3092\u300C\u5185\u90
 
 ReviewMethodNotProvided = \u7D19\u7248\u51FA\u7248\u65E5\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u67FB\u8AAD\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
+SlashInFilename = \u30D5\u30A1\u30A4\u30EB\u540D\u306B\u30B9\u30E9\u30C3\u30B7\u30E5\u304C\u542B\u307E\u308C\u3066\u3044\u306A\u3044\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+
 SourceCreatorRoleNotProvided = \u51FA\u7248\u7269\u306E\u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
 SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u7269\u306E\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
