Added new message

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -122,6 +122,8 @@ ViewItemFull_inRevision = Dieser Datensatz ist in \u00DCberarbeitung! Letzte Nac
 
 ViewItemFull_invalidID = Das Item mit dem Identifikator $1 konnte nicht gefunden werden.
 
+ViewItemFull_noPermission = Sie haben leider keine Berechtigung diese Version des Datensatzes zu sehen.
+
 ViewItemFull_submitted = Dieser Datensatz ist eingestellt. Letzte Nachricht:
 
 ViewItemFull_user_has_no_context = Sie haben keine Privilegien um Datens\u00E4tze anzulegen.
