--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -125,6 +125,8 @@ ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = The item with the identifier $1 could not be found.
 
+ViewItemFull_noPermission = Sorry, you have no permission to view this item version.
+
 ViewItemFull_submitted = This item is submitted! Last message:
 
 ViewItemFull_user_has_no_context = You do not have privileges to create an item.
