--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -125,6 +125,8 @@ ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = \u8B58\u5225\u5B50$1\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
 
+ViewItemFull_noPermission = Sorry, you have no permission to view this item version.
+
 ViewItemFull_submitted = \u30A2\u30A4\u30C6\u30E0\u304C\u767B\u9332\u3055\u308C\u307E\u3057\u305F\u3002\u767B\u9332\u30E1\u30C3\u30BB\u30FC\u30B8\u306F\u4EE5\u4E0B\u306E\u901A\u308A\u3067\u3059:
 
 ViewItemFull_user_has_no_context = You do not have privileges to create an item.
