--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -706,7 +706,7 @@ ItemList_SortOrderDescending = \u964D\u9806\u306B\u4E26\u3093\u3067\u3044\u307E\
 
 ItemList_Total = \u4EF6\u6570:
 
-ItemList_filterAllExceptPendingWithdrawn = All (except pending and withdrawn)
+ItemList_filterAllExceptPendingWithdrawn = \u5168\u30a2\u30a4\u30c6\u30e0\uff08\u4eee\u4fdd\u5b58\u30fb\u53d6\u308a\u4e0b\u3052\u30a2\u30a4\u30c6\u30e0\u306f\u9664\u304f\uff09
 
 ItemList_filterAllExceptWithdrawn = \u5168\u3066\uFF08\u53D6\u308A\u4E0B\u3052\u5206\u306F\u9664\u304F\uFF09
 
@@ -841,9 +841,9 @@ SubmitItem_lblReleaseComment = \u516C\u958B\u30B3\u30E1\u30F3\u30C8
 
 SubmitItem_lblSubmitAudienceNotice = \u30D5\u30A1\u30A4\u30EB\u5171\u6709
 
-SubmitItem_lblSubmitAudienceNoticeRelease = The usergroups which will have access to your files can only be defined by the moderator. Please leave a respective message for the moderator in the field below.
+SubmitItem_lblSubmitAudienceNoticeRelease = \u4eca\u56de\u767b\u9332\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u306b\u30a2\u30af\u30bb\u30b9\u3067\u304d\u308b\u30e6\u30fc\u30b6\u30b0\u30eb\u30fc\u30d7\u3092\u5b9a\u7fa9\u3067\u304d\u308b\u306e\u306f\u30e2\u30c7\u30ec\u30fc\u30bf\uff08\u7ba1\u7406\u8005\uff09\u3060\u3051\u3067\u3059\u3002\u30e2\u30c7\u30ec\u30fc\u30bf\u306b\u9023\u7d61\u3057\u305f\u3044\u7279\u8a18\u4e8b\u9805\u304c\u3042\u308a\u307e\u3057\u305f\u3089\u3001\u4ee5\u4e0b\u306e\u5165\u529b\u6b04\u306b\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u66f8\u3044\u3066\u304f\u3060\u3055\u3044\u3002
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = The usergroups which will have access to your files can only be defined by the moderator, as soon as your item is released. Please leave a respective message for the moderator in the field below.
+SubmitItem_lblSubmitAudienceNoticeSubmit = \u4eca\u56de\u516c\u958b\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u306b\u30a2\u30af\u30bb\u30b9\u3067\u304d\u308b\u30e6\u30fc\u30b6\u30b0\u30eb\u30fc\u30d7\u3092\u5b9a\u7fa9\u3067\u304d\u308b\u306e\u306f\u30e2\u30c7\u30ec\u30fc\u30bf\uff08\u7ba1\u7406\u8005\uff09\u3060\u3051\u3067\u3059\u3002\u30e2\u30c7\u30ec\u30fc\u30bf\u306b\u9023\u7d61\u3057\u305f\u3044\u7279\u8a18\u4e8b\u9805\u304c\u3042\u308a\u307e\u3057\u305f\u3089\u3001\u4ee5\u4e0b\u306e\u5165\u529b\u6b04\u306b\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u66f8\u3044\u3066\u304f\u3060\u3055\u3044\u3002
 
 SubmitItem_lblSubmitComment = \u767B\u9332\u30B3\u30E1\u30F3\u30C8
 
