--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -197,6 +197,8 @@ ENUM_CREATORROLE_CONTRIBUTOR = Beitragender
 
 ENUM_CREATORROLE_EDITOR = Herausgeber
 
+ENUM_CREATORROLE_HONOREE = Geehrter
+
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Maler
