--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -196,6 +196,8 @@ ENUM_CREATORROLE_CONTRIBUTOR = Contributor
 
 ENUM_CREATORROLE_EDITOR = Editor
 
+ENUM_CREATORROLE_HONOREE = Honoree
+
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Painter
