--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -356,6 +356,8 @@ import_process_inputstream_available = Import-Datenstrom gefunden
 
 import_process_inputstream_unavailable = Iimport-Datenstrom nicht gefunden gefunden
 
+import_process_item_error = Fehler beim Importieren des Items
+
 import_process_item_imported = Datensatz wurde importiert
 
 import_process_item_not_imported = Datensatz wurde nicht importiert
