--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -362,6 +362,8 @@ import_process_inputstream_available = Import data stream found
 
 import_process_inputstream_unavailable = Import data stream not found
 
+import_process_item_error = Error while importing the item
+
 import_process_item_imported = Item imported
 
 import_process_item_not_imported = Item was not imported
