--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -30,7 +30,7 @@
 
 AffiliationDetailPage_detailsNotRetrieved = \u7D44\u7E54\u60C5\u5831\u306E\u8A73\u7D30\u8AAC\u660E\u306F\u73FE\u5728\u3042\u308A\u307E\u305B\u3093\u3002
 
-Affiliations_reloaded = ... \ufffd\ufffd\ufffd\u815f\ufffd\ufffd\u7b5d\ufffd\u0397\ufffd\ufffd\u2503\u7d4e\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\u7c8b\u662d\ufffd\u5e25\ufffd\ufffd\u969c\ufffd\ufffd\ufffd\ufffd
+Affiliations_reloaded = ... \uFFFD\uFFFD\uFFFD\u815F\uFFFD\uFFFD\u7B5D\uFFFD\u0397\uFFFD\uFFFD\u2503\u7D4E\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u7C8B\u662D\uFFFD\u5E25\uFFFD\uFFFD\u969C\uFFFD\uFFFD\uFFFD\uFFFD
 
 AuthorNotProvided = \u8457\u8005\u306E\u7A2E\u5225\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
@@ -361,6 +361,8 @@ import_process_initialize_submit_process_error = Submission initialization faile
 import_process_inputstream_available = Import data stream found
 
 import_process_inputstream_unavailable = Import data stream not found
+
+import_process_item_error = \u4E2D\u306B\u30A8\u30E9\u30FC\u304C\u30A2\u30A4\u30C6\u30E0\u3092\u30A4\u30F3\u30DD\u30FC\u30C8
 
 import_process_item_imported = Item imported
 
