Added Link for NIMS statistics

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2153,6 +2153,8 @@ source_volume = Band
 #
 ss = \u00DF
 
+statistics_NIMSLink = Detaillierte Statistiken f\u00FCr NIMS Datens\u00E4tze
+
 statistics_btnBack = Zur\u00FCck
 
 statistics_lblAllFiles = insgesamt
