--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2155,6 +2155,8 @@ source_volume = Volume
 #
 ss = \u00DF
 
+statistics_NIMSLink = Detailed statistics for NIMS items
+
 statistics_btnBack = Back
 
 statistics_lblAllFiles = Total
