--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2151,6 +2151,8 @@ source_volume = \u5DFB
 #
 ss = \u00DF
 
+statistics_NIMSLink = \u8A73\u7D30\u306A\u7D71\u8A08\u60C5\u5831
+
 statistics_btnBack = \u623B\u308B
 
 statistics_lblAllFiles = \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u7DCF\u6570
