--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -196,8 +196,6 @@ ENUM_CREATORROLE_CONTRIBUTOR = Contributor
 
 ENUM_CREATORROLE_EDITOR = Editor
 
-ENUM_CREATORROLE_HONOREE = Honoree
-
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Painter
@@ -2155,8 +2153,6 @@ source_volume = Volume
 #
 ss = \u00DF
 
-statistics_NIMSLink = Detailed statistics for NIMS items
-
 statistics_btnBack = Back
 
 statistics_lblAllFiles = Total
@@ -2226,3 +2222,5 @@ viewItemFullPage = View Item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
+
+ENUM_IDENTIFIERTYPE_ = n.a.
