--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -192,8 +192,6 @@ ENUM_CREATORROLE_CONTRIBUTOR = \u5BC4\u7A3F\u8005
 
 ENUM_CREATORROLE_EDITOR = \u7DE8\u96C6\u8005
 
-ENUM_CREATORROLE_HONOREE = Honoree
-
 ENUM_CREATORROLE_ILLUSTRATOR = \u30A4\u30E9\u30B9\u30C8\u30EC\u30FC\u30BF
 
 ENUM_CREATORROLE_PAINTER = \u30DA\u30A4\u30F3\u30BF\u30FC
@@ -708,7 +706,7 @@ ItemList_SortOrderDescending = \u964D\u9806\u306B\u4E26\u3093\u3067\u3044\u307E\
 
 ItemList_Total = \u4EF6\u6570:
 
-ItemList_filterAllExceptPendingWithdrawn = \u5168\u30A2\u30A4\u30C6\u30E0\uFF08\u4EEE\u4FDD\u5B58\u30FB\u53D6\u308A\u4E0B\u3052\u30A2\u30A4\u30C6\u30E0\u306F\u9664\u304F\uFF09
+ItemList_filterAllExceptPendingWithdrawn = All (except pending and withdrawn)
 
 ItemList_filterAllExceptWithdrawn = \u5168\u3066\uFF08\u53D6\u308A\u4E0B\u3052\u5206\u306F\u9664\u304F\uFF09
 
@@ -843,9 +841,9 @@ SubmitItem_lblReleaseComment = \u516C\u958B\u30B3\u30E1\u30F3\u30C8
 
 SubmitItem_lblSubmitAudienceNotice = \u30D5\u30A1\u30A4\u30EB\u5171\u6709
 
-SubmitItem_lblSubmitAudienceNoticeRelease = \u4ECA\u56DE\u767B\u9332\u3057\u305F\u30D5\u30A1\u30A4\u30EB\u306B\u30A2\u30AF\u30BB\u30B9\u3067\u304D\u308B\u30E6\u30FC\u30B6\u30B0\u30EB\u30FC\u30D7\u3092\u5B9A\u7FA9\u3067\u304D\u308B\u306E\u306F\u30E2\u30C7\u30EC\u30FC\u30BF\uFF08\u7BA1\u7406\u8005\uFF09\u3060\u3051\u3067\u3059\u3002\u30E2\u30C7\u30EC\u30FC\u30BF\u306B\u9023\u7D61\u3057\u305F\u3044\u7279\u8A18\u4E8B\u9805\u304C\u3042\u308A\u307E\u3057\u305F\u3089\u3001\u4EE5\u4E0B\u306E\u5165\u529B\u6B04\u306B\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u66F8\u3044\u3066\u304F\u3060\u3055\u3044\u3002
+SubmitItem_lblSubmitAudienceNoticeRelease = The usergroups which will have access to your files can only be defined by the moderator. Please leave a respective message for the moderator in the field below.
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = \u4ECA\u56DE\u516C\u958B\u3059\u308B\u30D5\u30A1\u30A4\u30EB\u306B\u30A2\u30AF\u30BB\u30B9\u3067\u304D\u308B\u30E6\u30FC\u30B6\u30B0\u30EB\u30FC\u30D7\u3092\u5B9A\u7FA9\u3067\u304D\u308B\u306E\u306F\u30E2\u30C7\u30EC\u30FC\u30BF\uFF08\u7BA1\u7406\u8005\uFF09\u3060\u3051\u3067\u3059\u3002\u30E2\u30C7\u30EC\u30FC\u30BF\u306B\u9023\u7D61\u3057\u305F\u3044\u7279\u8A18\u4E8B\u9805\u304C\u3042\u308A\u307E\u3057\u305F\u3089\u3001\u4EE5\u4E0B\u306E\u5165\u529B\u6B04\u306B\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u66F8\u3044\u3066\u304F\u3060\u3055\u3044\u3002
+SubmitItem_lblSubmitAudienceNoticeSubmit = The usergroups which will have access to your files can only be defined by the moderator, as soon as your item is released. Please leave a respective message for the moderator in the field below.
 
 SubmitItem_lblSubmitComment = \u767B\u9332\u30B3\u30E1\u30F3\u30C8
 
@@ -2151,8 +2149,6 @@ source_volume = \u5DFB
 #
 ss = \u00DF
 
-statistics_NIMSLink = \u8A73\u7D30\u306A\u7D71\u8A08\u60C5\u5831
-
 statistics_btnBack = \u623B\u308B
 
 statistics_lblAllFiles = \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u7DCF\u6570
@@ -2222,3 +2218,5 @@ viewItemFullPage = \u8A73\u7D30
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
 yes = \u62DB\u5F85
+
+ENUM_IDENTIFIERTYPE_ = n.a.
