Added honoree (again)

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -196,6 +196,8 @@ ENUM_CREATORROLE_CONTRIBUTOR = Contributor
 
 ENUM_CREATORROLE_EDITOR = Editor
 
+ENUM_CREATORROLE_HONOREE = Honoree
+
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Painter
@@ -292,6 +294,8 @@ ENUM_GENRE_SERIES = Series
 ENUM_GENRE_TALK_AT_EVENT = Talk
 
 ENUM_GENRE_THESIS = Thesis
+
+ENUM_IDENTIFIERTYPE_ = n.a.
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -2222,5 +2226,3 @@ viewItemFullPage = View Item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
-
-ENUM_IDENTIFIERTYPE_ = n.a.
