--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -192,6 +192,8 @@ ENUM_CREATORROLE_CONTRIBUTOR = \u5BC4\u7A3F\u8005
 
 ENUM_CREATORROLE_EDITOR = \u7DE8\u96C6\u8005
 
+ENUM_CREATORROLE_HONOREE = Honoree
+
 ENUM_CREATORROLE_ILLUSTRATOR = \u30A4\u30E9\u30B9\u30C8\u30EC\u30FC\u30BF
 
 ENUM_CREATORROLE_PAINTER = \u30DA\u30A4\u30F3\u30BF\u30FC
@@ -288,6 +290,8 @@ ENUM_GENRE_SERIES = \u9023\u8F09\u8A18\u4E8B
 ENUM_GENRE_TALK_AT_EVENT = \u8B1B\u6F14
 
 ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
+
+ENUM_IDENTIFIERTYPE_ = n.a.
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -2218,5 +2222,3 @@ viewItemFullPage = \u8A73\u7D30
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
 yes = \u62DB\u5F85
-
-ENUM_IDENTIFIERTYPE_ = n.a.
