--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -197,6 +197,8 @@ ENUM_CREATORROLE_CONTRIBUTOR = Beitragender
 
 ENUM_CREATORROLE_EDITOR = Herausgeber
 
+ENUM_CREATORROLE_HONOREE = Geehrter
+
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Maler
@@ -293,6 +295,8 @@ ENUM_GENRE_SERIES = Reihe
 ENUM_GENRE_TALK_AT_EVENT = Vortrag
 
 ENUM_GENRE_THESIS = Hochschulschrift
+
+ENUM_IDENTIFIERTYPE_ = n.a.
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -2220,6 +2224,3 @@ viewItemFullPage = Datensatz ansehen
 warning_lblMessageHeader = Systemnachrichten und Warnungen:
 
 yes = Ja
-
-ENUM_IDENTIFIERTYPE_ = n.a.
-
