changed referee label

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -205,7 +205,7 @@ ENUM_CREATORROLE_PAINTER = Maler
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Fotograf
 
-ENUM_CREATORROLE_REFEREE = Begutachter
+ENUM_CREATORROLE_REFEREE = Gutachter
 
 ENUM_CREATORROLE_TRANSCRIBER = Transkribierer
 
