new formats ESCIDOC_XML and ESCIDOC_XML

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -649,7 +649,9 @@ Export_ExportFormat_BIBTEX = BibTeX
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
-Export_ExportFormat_XML = eSciDoc XML
+Export_ExportFormat_XML = XML
+
+Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_FileFormat_HTML = HTML
 
@@ -660,6 +662,8 @@ Export_FileFormat_PDF = PDF
 Export_FileFormat_RTF = RTF
 
 Export_FileFormat_SNIPPET = SNIPPET
+
+Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
 
 Feed_OrgUnit_Recent_Releases = Neue PubMan Eintr\u00E4ge f\u00FCr die Organisation
 
