--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -291,8 +291,6 @@ ENUM_GENRE_TALK_AT_EVENT = \u8B1B\u6F14
 
 ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
 
-ENUM_IDENTIFIERTYPE_ = n.a.
-
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
@@ -644,7 +642,9 @@ Export_ExportFormat_BIBTEX = BibTeX
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
-Export_ExportFormat_XML = eSciDoc XML
+Export_ExportFormat_XML = XML
+
+Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_FileFormat_HTML = HTML
 
@@ -655,6 +655,8 @@ Export_FileFormat_PDF = PDF
 Export_FileFormat_RTF = RTF
 
 Export_FileFormat_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML
+
+Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
 
 Feed_OrgUnit_Recent_Releases = \u7D44\u7E54\u306E\u6700\u65B0\u516C\u958B\u30A2\u30A4\u30C6\u30E0
 
@@ -710,7 +712,7 @@ ItemList_SortOrderDescending = \u964D\u9806\u306B\u4E26\u3093\u3067\u3044\u307E\
 
 ItemList_Total = \u4EF6\u6570:
 
-ItemList_filterAllExceptPendingWithdrawn = All (except pending and withdrawn)
+ItemList_filterAllExceptPendingWithdrawn = \u5168\u30A2\u30A4\u30C6\u30E0\uFF08\u4EEE\u4FDD\u5B58\u30FB\u53D6\u308A\u4E0B\u3052\u30A2\u30A4\u30C6\u30E0\u306F\u9664\u304F\uFF09
 
 ItemList_filterAllExceptWithdrawn = \u5168\u3066\uFF08\u53D6\u308A\u4E0B\u3052\u5206\u306F\u9664\u304F\uFF09
 
@@ -845,9 +847,9 @@ SubmitItem_lblReleaseComment = \u516C\u958B\u30B3\u30E1\u30F3\u30C8
 
 SubmitItem_lblSubmitAudienceNotice = \u30D5\u30A1\u30A4\u30EB\u5171\u6709
 
-SubmitItem_lblSubmitAudienceNoticeRelease = The usergroups which will have access to your files can only be defined by the moderator. Please leave a respective message for the moderator in the field below.
+SubmitItem_lblSubmitAudienceNoticeRelease = \u4ECA\u56DE\u767B\u9332\u3057\u305F\u30D5\u30A1\u30A4\u30EB\u306B\u30A2\u30AF\u30BB\u30B9\u3067\u304D\u308B\u30E6\u30FC\u30B6\u30B0\u30EB\u30FC\u30D7\u3092\u5B9A\u7FA9\u3067\u304D\u308B\u306E\u306F\u30E2\u30C7\u30EC\u30FC\u30BF\uFF08\u7BA1\u7406\u8005\uFF09\u3060\u3051\u3067\u3059\u3002\u30E2\u30C7\u30EC\u30FC\u30BF\u306B\u9023\u7D61\u3057\u305F\u3044\u7279\u8A18\u4E8B\u9805\u304C\u3042\u308A\u307E\u3057\u305F\u3089\u3001\u4EE5\u4E0B\u306E\u5165\u529B\u6B04\u306B\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u66F8\u3044\u3066\u304F\u3060\u3055\u3044\u3002
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = The usergroups which will have access to your files can only be defined by the moderator, as soon as your item is released. Please leave a respective message for the moderator in the field below.
+SubmitItem_lblSubmitAudienceNoticeSubmit = \u4ECA\u56DE\u516C\u958B\u3059\u308B\u30D5\u30A1\u30A4\u30EB\u306B\u30A2\u30AF\u30BB\u30B9\u3067\u304D\u308B\u30E6\u30FC\u30B6\u30B0\u30EB\u30FC\u30D7\u3092\u5B9A\u7FA9\u3067\u304D\u308B\u306E\u306F\u30E2\u30C7\u30EC\u30FC\u30BF\uFF08\u7BA1\u7406\u8005\uFF09\u3060\u3051\u3067\u3059\u3002\u30E2\u30C7\u30EC\u30FC\u30BF\u306B\u9023\u7D61\u3057\u305F\u3044\u7279\u8A18\u4E8B\u9805\u304C\u3042\u308A\u307E\u3057\u305F\u3089\u3001\u4EE5\u4E0B\u306E\u5165\u529B\u6B04\u306B\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u66F8\u3044\u3066\u304F\u3060\u3055\u3044\u3002
 
 SubmitItem_lblSubmitComment = \u767B\u9332\u30B3\u30E1\u30F3\u30C8
 
@@ -2152,6 +2154,8 @@ source_volume = \u5DFB
 # for cut&paste
 #
 ss = \u00DF
+
+statistics_NIMSLink = \u8A73\u7D30\u306A\u7D71\u8A08\u60C5\u5831
 
 statistics_btnBack = \u623B\u308B
 
