--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -21,8 +21,8 @@
 #
 #
 # Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
-# fÃ¼r wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur FÃ¶rderung der Wissenschaft e.V.
+# für wissenschaftlich-technische Information mbH and Max-Planck-
+# Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
 AcceptItemPage = Accept Item
@@ -294,8 +294,6 @@ ENUM_GENRE_SERIES = Series
 ENUM_GENRE_TALK_AT_EVENT = Talk
 
 ENUM_GENRE_THESIS = Thesis
-
-ENUM_IDENTIFIERTYPE_ = n.a.
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -648,7 +646,9 @@ Export_ExportFormat_BIBTEX = BibTeX
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
-Export_ExportFormat_XML = eSciDoc XML
+Export_ExportFormat_XML = XML
+
+Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_FileFormat_HTML = HTML
 
@@ -659,6 +659,8 @@ Export_FileFormat_PDF = PDF
 Export_FileFormat_RTF = RTF
 
 Export_FileFormat_SNIPPET = SNIPPET
+
+Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
 
 Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit 
 
@@ -2156,6 +2158,8 @@ source_volume = Volume
 # for cut&paste
 #
 ss = \u00DF
+
+statistics_NIMSLink = Detailed statistics for NIMS items
 
 statistics_btnBack = Back
 
