added suggestions from http://colab.mpdl.mpg.de/mediawiki/PubMan_Wording

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -21,7 +21,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
+# Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
@@ -43,7 +43,7 @@ AcceptItem_lnkAccept = Akzeptieren
 
 AcceptItem_lnkCancel = Abbrechen
 
-AdvancedSearchPage = Erweiterte Suche
+AdvancedSearchPage = Detailsuche 
 
 AffiliationDetailAlternativeTitle = Alternativer Titel
 
@@ -51,7 +51,7 @@ AffiliationDetailDescription = Beschreibung
 
 AffiliationDetailDetails = Details
 
-AffiliationDetailIdentifier = Identifier
+AffiliationDetailIdentifier = Identifikator
 
 AffiliationDetailLocation = Organisationssitz
 
@@ -105,7 +105,7 @@ AudiencePage_numberOf = insgesamt
 
 AudiencePage_numberOfFiles = Dateien:
 
-Basket_lblRemoveSelected = VOM BASKET ENTFERNEN
+Basket_lblRemoveSelected = AUS BASKET ENTFERNEN
 
 #
 # Bread Crumb Navigation
@@ -167,7 +167,7 @@ ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Deprecated: erg\u00E4nzendes Mater
 
 ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Inhaltsverzeichnis
 
-ENUM_CONTENTCATEGORY_abstract = Abstract
+ENUM_CONTENTCATEGORY_abstract = Zusammenfassung
 
 ENUM_CONTENTCATEGORY_any-fulltext = beliebiger Volltext
 
@@ -181,13 +181,13 @@ ENUM_CONTENTCATEGORY_pre-print = Preprint
 
 ENUM_CONTENTCATEGORY_publisher-version = Verlagsversion
 
-ENUM_CONTENTCATEGORY_supplementary-material = erg\u00E4nzendes Material
+ENUM_CONTENTCATEGORY_supplementary-material = Erg\u00E4nzendes Material
 
 ENUM_CONTENTCATEGORY_table-of-contents = Inhaltsverzeichnis
 
 ENUM_CREATORROLE_ADVISOR = Ratgeber
 
-ENUM_CREATORROLE_ARTIST = Artist
+ENUM_CREATORROLE_ARTIST = K\u00FCnstler
 
 ENUM_CREATORROLE_AUTHOR = Autor
 
@@ -425,7 +425,7 @@ ENUM_STATE_SUBMITTED = Eingestellt
 
 ENUM_STATE_WITHDRAWN = Zur\u00FCckgezogen
 
-ENUM_VISIBILITY_AUDIENCE = eingeschr\u00E4nkt
+ENUM_VISIBILITY_AUDIENCE = Eingeschr\u00E4nkt
 
 ENUM_VISIBILITY_PRIVATE = Privat
 
@@ -484,7 +484,7 @@ EditItem_btnSelectCCLicense = CC Lizenz ausw\u00E4hlen
 
 EditItem_btnSelectCCLicenseApply = \u00FCbernehmen
 
-EditItem_lblAbstract = Abstract
+EditItem_lblAbstract = Zusammenfassung
 
 EditItem_lblAddCreator = Urheber (Personen/Organisationen) hinzuf\u00FCgen
 
@@ -502,7 +502,7 @@ EditItem_lblContentRelation = Relation
 
 EditItem_lblContentRelationDescription = Beschreibung
 
-EditItem_lblContentRelationIdentifier = Identifier
+EditItem_lblContentRelationIdentifier = Identifikator
 
 EditItem_lblContentRelationType = Typ
 
@@ -584,7 +584,7 @@ EditItem_lblRelation = Relation
 
 EditItem_lblRights = Rechte
 
-EditItem_lblSequenceNumber = Sequence Number
+EditItem_lblSequenceNumber = Artikelnummer
 
 EditItem_lblSize = Gr\u00F6sse
 
@@ -711,7 +711,7 @@ ItemList_Show = Zeige
 #
 # ItemList
 #
-ItemList_SortBy = Sortierung
+ItemList_SortBy = Sortierung nach
 
 ItemList_SortOrderAscending = aufsteigend
 
@@ -734,8 +734,6 @@ List_ShortView = Kurzansicht (alle Datens\u00E4tze)
 List_lblAddToBasket = ZUM BASKET HINZUF\u00DCGEN
 
 List_lblBibList = Bibliographische Liste
-
-List_lblExportAllOptions = BASKET EXPORT
 
 List_lblExportOptions = EXPORT
 
@@ -790,7 +788,7 @@ NoSearchResultsPage = Keine Treffer
 #
 # Quality Assurance / Moderator Workspace
 #
-QAWSPage = QA Arbeitsplatz
+QAWSPage = QA Bereich
 
 #
 #ReviseItem
@@ -882,7 +880,7 @@ ViewItemFull_btnItemStatistics = Statistiken
 
 ViewItemFull_btnItemVersions = Freigabegeschichte
 
-ViewItemFull_lblAbstract = Abstract
+ViewItemFull_lblAbstract = Zusammenfassung
 
 ViewItemFull_lblAddToBasket = Zum Basket hinzuf\u00FCgen
 
@@ -962,7 +960,7 @@ ViewItemFull_lblHasRevision = Revision
 
 ViewItemFull_lblHideGroup = ausblenden:
 
-ViewItemFull_lblIdentifiers = Standard-Identifiers
+ViewItemFull_lblIdentifiers = Identifikatoren
 
 ViewItemFull_lblIsAffiliatedTo = Zugeh\u00F6rig zu
 
@@ -1006,8 +1004,6 @@ ViewItemFull_lblRelation = Relation
 
 ViewItemFull_lblReleased = , freigegeben
 
-ViewItemFull_lblRemoveFromBasket = Aus dem Basket entfernen
-
 ViewItemFull_lblRevisionMethod = Art der Begutachtung
 
 ViewItemFull_lblShowGroup = einblenden:
@@ -1030,13 +1026,13 @@ ViewItemFull_lblSourceEdition = Ausgabe
 
 ViewItemFull_lblSourceGenre = Genre der Quelle
 
-ViewItemFull_lblSourceIdentifier = Identifier
+ViewItemFull_lblSourceIdentifier = Identifikator
 
 ViewItemFull_lblSourcePlace = Ort
 
 ViewItemFull_lblSourcePubInfo = Verlag, Ort, Ausgabe
 
-ViewItemFull_lblSourceSequenceNo = Sequence Number
+ViewItemFull_lblSourceSequenceNo = Artikelnummer
 
 ViewItemFull_lblSourceStartEndPage = Start- / Endseite
 
@@ -1055,7 +1051,7 @@ ViewItemFull_lblSubHeaderFile = Dateien
 #
 ViewItemFull_lblSubHeaderItem = Genre: 
 
-ViewItemFull_lblSubHeaderLocalTags = lokale Tags
+ViewItemFull_lblSubHeaderLocalTags = Lokale Tags
 
 ViewItemFull_lblSubHeaderLocators = Externe Referenzen
 
@@ -1147,7 +1143,7 @@ ViewItemMedium_lblPages = Gesamtseitenzahl
 
 ViewItemMedium_lblPublishingInfo = Verlag, Ort, Ausgabe
 
-ViewItemMedium_lblSequence = Sequence Number
+ViewItemMedium_lblSequence = Artikelnummer
 
 ViewItemMedium_lblSourceAffiliations = Affiliations
 
@@ -1161,13 +1157,13 @@ ViewItemMedium_lblSourceFurtherSources = es sind weitere Quellen vorhanden
 
 ViewItemMedium_lblSourceGenre = Genre der Quelle
 
-ViewItemMedium_lblSourceIdentifier = Identifier
+ViewItemMedium_lblSourceIdentifier = Identifikator
 
 ViewItemMedium_lblSourcePubInfo = Verlag, Ort, Ausgabe
 
 ViewItemMedium_lblSourcePublishingInfo = Verlag, Ort, Ausgabe d. Quelle
 
-ViewItemMedium_lblSourceSequenceNo = Sequence Number
+ViewItemMedium_lblSourceSequenceNo = Artikelnummer
 
 ViewItemMedium_lblSourceStartEndPage = Start- / Endseite
 
@@ -1236,11 +1232,11 @@ ViewItemShort_lblDates = Datum
 
 ViewItemShort_lblDetails = Details
 
-ViewItemShort_lblFile = Datei(en) 
+ViewItemShort_lblFile = Dateien 
 
 ViewItemShort_lblFileAttached = Datei
 
-ViewItemShort_lblFiles = Datei(en)
+ViewItemShort_lblFiles = Dateien
 
 ViewItemShort_lblFilesAttached = Dateien
 
@@ -1248,7 +1244,7 @@ ViewItemShort_lblGenre = Genre
 
 ViewItemShort_lblLess = Weniger
 
-ViewItemShort_lblLocator = externe Referenz(en)
+ViewItemShort_lblLocator = externe Referenzen
 
 ViewItemShort_lblLocatorAttached = ext. Referenz
 
@@ -1271,7 +1267,7 @@ ViewItem_btnNextItem1 = > n\u00E4chster Datensatz
 
 ViewItem_btnPreviousItem1 = < voriger Datensatz
 
-ViewItem_lblAbstract1 = Abstract:
+ViewItem_lblAbstract1 = Zusammenfassung:
 
 ViewItem_lblAffiliatedOrganization1 = zugeh\u00F6rige Organisation:
 
@@ -1325,7 +1321,7 @@ ViewItem_lblFileVisibility = Zugriffsebene:
 
 ViewItem_lblGenre1 = Genre:
 
-ViewItem_lblIdentifier1 = Identifier:
+ViewItem_lblIdentifier1 = Identifikator:
 
 ViewItem_lblItemBookmark = Lesezeichen:
 
@@ -1360,7 +1356,7 @@ ViewItem_lblSourceEdition = Ausgabe:
 
 ViewItem_lblSourceEndPage = Endseite: 
 
-ViewItem_lblSourceIdentifier = Identifier: 
+ViewItem_lblSourceIdentifier = Identifikator: 
 
 ViewItem_lblSourceIssue = Sonderheft: 
 
@@ -1368,7 +1364,7 @@ ViewItem_lblSourcePlace = Ort:
 
 ViewItem_lblSourcePublisher = Verlag:
 
-ViewItem_lblSourceSequenceNo = Sequence Number: 
+ViewItem_lblSourceSequenceNo = Artikelnummer: 
 
 ViewItem_lblSourceStartPage = Startseite: 
 
@@ -1458,7 +1454,7 @@ actionMenu_lnkDelete = L\u00F6schen
 
 actionMenu_lnkEdit = Bearbeiten
 
-actionMenu_lnkEditLocalTags = lokale Tags bearbeiten
+actionMenu_lnkEditLocalTags = Lokale Tags bearbeiten
 
 actionMenu_lnkModify = \u00C4ndern
 
@@ -1520,7 +1516,7 @@ adv_search_lbHeaderFiles = Dateien & ext. Referenzen
 
 adv_search_lbHeaderGenre = Genre
 
-adv_search_lbHeaderIdent = Identifier
+adv_search_lbHeaderIdent = Identifikator
 
 adv_search_lbHeaderLanguage = Sprache der Publikation
 
@@ -1533,7 +1529,7 @@ adv_search_lbHeaderPerson = Person
 adv_search_lbHeaderSource = Quelle
 
 #Headers
-adv_search_lbHeaderWoP = Wort oder Phrase
+adv_search_lbHeaderWoP = Wort oder Ausdruck
 
 #Genre (deprecated)
 adv_search_lblChkGenre = Genres
@@ -1731,15 +1727,11 @@ easy_submission_btnSave = Speichern
 
 easy_submission_btnUploadFile = Datei hochladen
 
-easy_submission_lblAbstract = Abstract
+easy_submission_lblAbstract = Zusammenfassung
 
 easy_submission_lblBibtexPath = Pfad
 
 easy_submission_lblBibtexUpload = Hochladen
-
-easy_submission_lblCollectionOfImportedItem1 = Dieser Datensatz wird in die
-
-easy_submission_lblCollectionOfImportedItem2 = \ importiert
 
 easy_submission_lblCollectionOfItem = Dieser Datensatz wird ein Teil der
 
@@ -1797,7 +1789,7 @@ easy_submission_lblIDTypeArxiv = arXiv ID
 
 easy_submission_lblIDTypeEscidoc = eSciDoc ID
 
-easy_submission_lblIDValue = Identifier
+easy_submission_lblIDValue = Identifikator
 
 easy_submission_lblImportReferences = Hier k\u00F6nnen Sie eine BibTeX-Datei von Ihrem Rechner importieren.
 
@@ -1913,7 +1905,7 @@ g_events = Veranstaltung
 
 g_files = Datei
 
-g_identifiers = Identifier
+g_identifiers = Identifikator
 
 g_item_basic = Basisdaten
 
@@ -1925,7 +1917,7 @@ g_select_roles = Rolle d. Urhebers
 
 g_source_basic = Quelle
 
-g_source_identifiers = Identifier
+g_source_identifiers = Identifikator
 
 g_source_volume_issue_pages = Details zur Quelle
 
@@ -1962,7 +1954,7 @@ info_lblMessageHeader = Systemnachrichten:
 
 informative_message = Informativ:
 
-item_abstract = Abstract
+item_abstract = Zusammenfassung
 
 item_basic_label = Basisdaten
 
@@ -1980,9 +1972,9 @@ item_degree = Abschluss
 
 item_genre = Genre
 
-item_identifier_type = Art des Identifier
+item_identifier_type = Art des Identifikators
 
-item_identifier_value = Wert des Identifier
+item_identifier_value = Wert des Identifikators
 
 item_language = Sprache der Publikation
 
@@ -2119,7 +2111,7 @@ save = Speichern
 
 search_btSearch = Los
 
-search_lblAdvancedSearch = Erweiterte Suche
+search_lblAdvancedSearch = Detailsuche
 
 search_lblAdvancedSearch_noresults = Erweiterte Suche
 
@@ -2144,7 +2136,7 @@ source_genre = Genre
 
 source_issue = Heftnummer
 
-source_sequence_number = Sequence Number
+source_sequence_number = Artikelnummer
 
 source_start-page = Startseite
 
