--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
+# Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
@@ -575,7 +575,7 @@ EditItem_lblPubLanguage = Language of Publication
 
 EditItem_lblPublishing = Publishing
 
-EditItem_lblPublishingInfo = Publishing info
+EditItem_lblPublishingInfo = Publishing Info
 
 EditItem_lblRelation = Relation
 
@@ -589,7 +589,7 @@ EditItem_lblSource = Source
 
 EditItem_lblStartpage = Startpage
 
-EditItem_lblSubject = free keywords
+EditItem_lblSubject = Free keywords
 
 EditItem_lblTitleAndLanguage = Title and Language
 
@@ -708,7 +708,7 @@ ItemList_Show = Showing
 #
 # ItemList
 #
-ItemList_SortBy = Sorting
+ItemList_SortBy = Sort by
 
 ItemList_SortOrderAscending = ascending
 
@@ -732,8 +732,6 @@ List_lblAddToBasket = ADD SELECTED TO BASKET
 
 List_lblBibList = Bibliographic List
 
-List_lblExportAllOptions = BASKET EXPORT
-
 List_lblExportOptions = EXPORT
 
 List_lblFilterOptions = FILTER
@@ -750,7 +748,7 @@ List_lblRevision = Revisions:
 
 List_lblSelectItem = Select Item
 
-List_lblSortOptions = SORTING
+List_lblSortOptions = SORT
 
 List_lblViewOptions = VIEW
 
@@ -959,7 +957,7 @@ ViewItemFull_lblHasRevision = Revision
 
 ViewItemFull_lblHideGroup = hide
 
-ViewItemFull_lblIdentifiers = Standard Identifiers
+ViewItemFull_lblIdentifiers = Identifiers
 
 ViewItemFull_lblIsAffiliatedTo = Affiliated to
 
@@ -1002,8 +1000,6 @@ ViewItemFull_lblPublishingInfo = Publishing info
 ViewItemFull_lblRelation = Relation
 
 ViewItemFull_lblReleased = , released
-
-ViewItemFull_lblRemoveFromBasket = Remove From Basket
 
 ViewItemFull_lblRevisionMethod = Rev. Method
 
@@ -1060,7 +1056,7 @@ ViewItemFull_lblSubHeaderSource = Source
 
 ViewItemFull_lblSubHeaderSystemDetails = System Details
 
-ViewItemFull_lblSubject = free keywords
+ViewItemFull_lblSubject = Free keywords
 
 ViewItemFull_lblSystemIdentifiers = version ID
 
@@ -1215,7 +1211,7 @@ ViewItemRevisions_lblReleaseDate = Released:
 #
 # ViewItem Short
 #
-ViewItemShort_lblCreators = Creator(s)
+ViewItemShort_lblCreators = Creators
 
 ViewItemShort_lblDateAccepted = Accepted
 
@@ -1229,15 +1225,15 @@ ViewItemShort_lblDatePublishedOnline = Published online
 
 ViewItemShort_lblDateSubmitted = Submitted
 
-ViewItemShort_lblDates = Date(s)
+ViewItemShort_lblDates = Dates
 
 ViewItemShort_lblDetails = Details
 
-ViewItemShort_lblFile = File(s)
+ViewItemShort_lblFile = Files
 
 ViewItemShort_lblFileAttached = File
 
-ViewItemShort_lblFiles = File(s)
+ViewItemShort_lblFiles = Files
 
 ViewItemShort_lblFilesAttached = Files
 
@@ -1245,7 +1241,7 @@ ViewItemShort_lblGenre = Genre
 
 ViewItemShort_lblLess = Less
 
-ViewItemShort_lblLocator = Locator(s)
+ViewItemShort_lblLocator = Locators
 
 ViewItemShort_lblLocatorAttached = Locator
 
@@ -1375,7 +1371,7 @@ ViewItem_lblSourceVolume = Volume:
 
 ViewItem_lblSourceofSource = Source of source
 
-ViewItem_lblSubject1 = free keywords:
+ViewItem_lblSubject1 = Free keywords:
 
 ViewItem_lblTitle1 = Title:
 
@@ -1455,7 +1451,7 @@ actionMenu_lnkDelete = Delete
 
 actionMenu_lnkEdit = Edit
 
-actionMenu_lnkEditLocalTags = Edit local tags
+actionMenu_lnkEditLocalTags = Edit Local Tags
 
 actionMenu_lnkModify = Modify
 
@@ -1495,11 +1491,11 @@ adv_search_btStart = Start Search
 
 adv_search_fileComponentAvailability = Files & Locators
 
-adv_search_fileComponentEmbargoDate = has Embargo Date
+adv_search_fileComponentEmbargoDate = has embargo date
 
 adv_search_fileComponentVisibility = Visibility
 
-adv_search_fileContentCategory = content category
+adv_search_fileContentCategory = Content category
 
 adv_search_fileExcludeCategory = exclude category
 
@@ -1734,11 +1730,7 @@ easy_submission_lblBibtexPath = Path
 
 easy_submission_lblBibtexUpload = Upload
 
-easy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
-
-easy_submission_lblCollectionOfImportedItem2 = \ imported
-
-easy_submission_lblCollectionOfItem = This item will be part of the
+easy_submission_lblCollectionOfItem = This item will be part of 
 
 easy_submission_lblCopyrightDate = Copyright Date
 
@@ -1798,7 +1790,7 @@ easy_submission_lblIDValue = Identifier
 
 easy_submission_lblImportReferences = Import references in a structured format from a local folder here.
 
-easy_submission_lblKeywords = free Keywords
+easy_submission_lblKeywords = Free Keywords
 
 easy_submission_lblLicencingInfo = Licence
 
@@ -1992,7 +1984,7 @@ item_published-online = Date published online
 
 item_review-method = Review type
 
-item_subject = free keywords
+item_subject = Free keywords
 
 item_table-of-contents = Table of content
 
@@ -2062,7 +2054,7 @@ multipleImport_dont_import_anything = If duplicates are detected, don't import a
 
 multipleImport_dont_import_duplicates = Don't import duplicate publications
 
-multipleImport_getMultipleRecords = Import multiple records
+multipleImport_getMultipleRecords = Import Multiple Items
 
 multipleImport_importFormat = Import format
 
@@ -2102,7 +2094,7 @@ qaws_lblCollectionSelection = Collection
 
 qaws_lblItemStateSelection = Item State
 
-qaws_lblMultipleImportTags = Import
+qaws_lblMultipleImportTags = Import Multiple Items
 
 qaws_lblOrgUnitSelection = Organizational Unit
 
@@ -2210,7 +2202,7 @@ submission_lnkImport = Import
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Import multiple items
+submission_lnkMultipleImport = Import Multiple Items
 
 submission_lnkNewSubmission = Full Submission
 
