--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2180,11 +2180,11 @@ styleTheme_lblPubMan = PubMan
 
 submission_descEasySubmission = Using the easy submission one can enter stepwise information on a publication. At the end of the wizard one can save the item or switch to the full submission mask to add more details.
 
-submission_descImport = This functionality allows you to import a BibTeX file with one BibTeX reference or it allows you to fetch metadata and fulltext(s) from other systems like arXiv or PubMed Central.
+submission_descImport = This method allows you to import a single BibTeX reference or it allows you to fetch metadata and full text(s) from other systems like arXiv or PubMed Central.
 
-submission_descMultipleImport = This functionality allows you to import a BibTeX file with multiple BibTeX references or it allows you to fetch metadata (and fulltexts) from other systems like SPIRES or BioMed Central.
+submission_descMultipleImport = This method allows you to import multiple items in a structured format (e.g. EndNote, BibTex).
 
-submission_descNewSubmission = The full submission offers a genre specific entry mask for entering reference data. Besides that one or more full texts can be uploaded and a locator to externally stored data (e.g. Supplementary Material) can be specified.
+submission_descNewSubmission = The full submission offers a genre specific entry mask for entering reference data. Additionally one or more full texts can be uploaded and information on externally stored data (e.g. Supplementary Material) can be specified.
 
 submission_lblAuthorCopyPaste = You can copy or write authors to this field which are then parsed and added automatically below after clicking the "Add" button.
 
