--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2180,7 +2180,7 @@ submission_descEasySubmission = \u00DCber die einfache Dateneingabe k\u00F6nnen 
 
 submission_descImport = Diese Funktion bietet zum einen den Import einer Datei, die einen BibTeX Eintrag enth\u00E4lt, zum anderen kann man hier Metadaten und Volltext(e) aus anderen Systemen, wie arXiv oder PubMed Central in die eSciDoc Eingabemaske laden.
 
-submission_descMultipleImport = Diese Funktion bietet zum einen den Import einer Datei, die mehrere BibTeX Eintr\u00E4ge enth\u00E4lt, zum anderen kann man hier Metadaten (und Volltexte) aus anderen Systemen, wie SPIRES oder BioMed Central in die eSciDoc Eingabemaske laden.
+submission_descMultipleImport = Diese Methode erlaubt Ihnen mehrere Items in einem strukturierten Format hochzuladen (z.B. EndNote, BibTex).
 
 submission_descNewSubmission = Die detaillierte Eingabemaske bietet eine dokumentenspezifische Maske zur Eingabe von Publikationsdaten. Des weiteren k\u00F6nnen ein oder mehrere Volltexte hochgeladen werden, sowie eine URL zu extern abgelegtem Material (z.b. Supplementary Material) gesetzt werden.
 
