--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -226,7 +226,7 @@ ENUM_CRITERIA_CREATOR = Urheber
 #
 ENUM_CRITERIA_DATE = Datum
 
-ENUM_CRITERIA_EVENT_TITLE = Name der Veranstalung
+ENUM_CRITERIA_EVENT_TITLE = Name der Veranstaltung
 
 ENUM_CRITERIA_FILE = Dateien
 
@@ -260,7 +260,7 @@ ENUM_DEGREETYPE_PHD = Doktorarbeit
 
 ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
-ENUM_EMPTY = kein Eintrag
+ENUM_EMPTY = -
 
 ENUM_GENRE_ARTICLE = Zeitschriftenartikel
 
