--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -259,7 +259,7 @@ ENUM_DEGREETYPE_PHD = PHD
 
 ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
-ENUM_EMPTY = no entry
+ENUM_EMPTY = -
 
 ENUM_GENRE_ARTICLE = Journal Article
 
